# haflsl

./: .clang-format  .gitignore  CMakeLists.txt  README.md  draw.spirv  draw.test  imgui.ini  mine.test  shader.test  test.test  test.txt  vcpkg.json
examples/: scripting.cpp  spirv.cpp
haflsl/: CMakeLists.txt
haflsl-viewer/: main.cpp  text_editor.cpp
haflsl/include/haflsl/: ast.hpp  bytecode_writer.hpp  chunk.hpp  code_buffer.hpp  compiler.hpp  global.hpp  lexer.hpp  logger.hpp  nodes.hpp  parser.hpp  preprocessing.hpp  result.hpp  statement.hpp  token.hpp  transpiler.hpp  types.hpp  utils.hpp  uuid.hpp  value.hpp  visitor.hpp  vm.hpp
haflsl/include/haflsl/compiler/: bytecode_compiler.hpp  spirv_compiler.hpp
haflsl/include/haflsl/writer/bytecode/: bytecode_writer.hpp
haflsl/include/haflsl/writer/spirv/: code_buffer.hpp  constant_register.hpp  name_register.hpp  spirv_writer.hpp  type_register.hpp  variable_register.hpp
haflsl/source/: ast.cpp  bytecode_writer.cpp  chunk.cpp  code_buffer.cpp  compiler.cpp  global.cpp  lexer.cpp  logger.cpp  nodes.cpp  parser.cpp  preprocessing.cpp  token.cpp  transpiler.cpp  utils.cpp  uuid.cpp  value.cpp  vm.cpp
haflsl/source/compiler/: bytecode_compiler.cpp  spirv_compiler.cpp
haflsl/source/writer/bytecode/: bytecode_writer.cpp
haflsl/source/writer/spirv/: code_buffer.cpp  constant_register.cpp  name_register.cpp  spirv_writer.cpp  type_register.cpp  variable_register.cpp
shaders/: draw.glsl
test/: CMakeLists.txt  main.cpp
